--- a/W03_functions_arrays.html
+++ b/W03_functions_arrays.html
@@ -34,83 +34,31 @@
     <main>
       <section id="functions">
         <article>
-          <h2>Addition</h2>
+          <h2>Operands</h2>
           <div>
-            <label for="addend1">Number 1:</label>
-            <input type="text" id="addend1" name="addend1" />
+            <label for="num1">Number 1:</label>
+            <input type="text" id="num1" name="num1" />
           </div>
           <div>
-            <label for="addend2">Number 2:</label>
-            <input type="text" id="addend2" name="addend2" />
+            <label for="num2">Number 2:</label>
+            <input type="text" id="num2" name="num2" />
           </div>
+          <br />
+          <br />
           <div>
-            <input type="button" id="addNumbers" value="Add Numbers" />
+            <label for="operand">What operation do you want to do?</label>
+            <select name="operand" id="operand">
+              <option value="select" disabled selected>Select one</option>
+              <option value="addition">Addition</option>
+              <option value="difference">Difference</option>
+              <option value="product">Product</option>
+              <option value="division">Division</option>
+            </select>
           </div>
+          <br />
           <div>
-            <label for="sum">Sum:</label>
-            <input type="text" id="sum" name="sum" disabled />
-          </div>
-        </article>
-        <article>
-          <h2>Subtraction</h2>
-          <div>
-            <label for="minuend">Number 1:</label>
-            <input type="text" id="minuend" name="minuend" />
-          </div>
-          <div>
-            <label for="subtrahend">Number 2:</label>
-            <input type="text" id="subtrahend" name="subtrahend" />
-          </div>
-          <div>
-            <input
-              type="button"
-              id="subtractNumbers"
-              value="Subtract Numbers"
-            />
-          </div>
-          <div>
-            <label for="difference">Difference:</label>
-            <input type="text" id="difference" name="difference" disabled />
-          </div>
-        </article>
-        <article>
-          <h2>Multiplication</h2>
-          <div>
-            <label for="factor1">Number 1:</label>
-            <input type="text" id="factor1" name="factor1" />
-          </div>
-          <div>
-            <label for="factor2">Number 2:</label>
-            <input type="text" id="factor2" name="factor2" />
-          </div>
-          <div>
-            <input
-              type="button"
-              id="multiplyNumbers"
-              value="Multiply Numbers"
-            />
-          </div>
-          <div>
-            <label for="product">Product:</label>
-            <input type="text" id="product" name="product" disabled />
-          </div>
-        </article>
-        <article>
-          <h2>Division</h2>
-          <div>
-            <label for="dividend">Number 1:</label>
-            <input type="text" id="dividend" name="dividend" />
-          </div>
-          <div>
-            <label for="divisor">Number 2:</label>
-            <input type="text" id="divisor" name="divisor" />
-          </div>
-          <div>
-            <input type="button" id="divideNumbers" value="Divide Numbers" />
-          </div>
-          <div>
-            <label for="quotient">Quotient:</label>
-            <input type="text" id="quotient" name="quotient" disabled />
+            <label for="result">Result:</label>
+            <input type="text" id="result" name="result" disabled />
           </div>
         </article>
       </section>
