--- a/W03_functions_arrays.html
+++ b/W03_functions_arrays.html
@@ -25,6 +25,7 @@
         <li><a href="w01_hello.html">Lesson 1</a></li>
         <li><a href="w02_var_arrays.html">Lesson 2</a></li>
         <li><a href="W03_functions_arrays.html">Lesson 3</a></li>
+        <li><a href="w04_functions_objects.html">Lesson 4</a></li>
       </ul>
     </nav>
 
