--- a/w04_functions_objects.html
+++ b/w04_functions_objects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSE 121B - Diana Quispe</title>
+    <title>Week 04 | Functions and Objects</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Kalam&display=swap"
     />
     <link rel="stylesheet" href="styles/main.css" />
-    <meta name="description" content="CSE 121B JavaScript" />
+    <meta name="description" content="Week 04 - Functions and Objects" />
   </head>
 
   <body>
@@ -30,12 +30,38 @@
     </nav>
 
     <header>
-      <h1>CSE 121B - JavaScript</h1>
-      <h2>Diana Quispe</h2>
+      <h1>Biography Revisited</h1>
+      <div>
+        <span id="name"></span>
+      </div>
+      <img src="#" alt="My picture" />
     </header>
-
     <main>
-      <img src="images/office.jpg" alt="The office" />
+      <section>
+        <table id="favorite-foods">
+          <tr>
+            <th>Favorite Foods</th>
+          </tr>
+        </table>
+        <br />
+        <br />
+        <br />
+        <table id="hobbies">
+          <tr>
+            <th>Hobbies</th>
+          </tr>
+        </table>
+        <br />
+        <br />
+        <br />
+        <table id="tablePlacesLive">
+          <tr>
+            <th>Places Lived</th>
+            <th>Length</th>
+          </tr>
+        </table>
+        <br />
+      </section>
     </main>
 
     <footer>
@@ -43,6 +69,8 @@
       Section 4
     </footer>
 
+    <script src="scripts/main.js"></script>
+    <script src="scripts/task4.js"></script>
     <script src="scripts/date.js"></script>
   </body>
 </html>
