--- a/w01_hello.html
+++ b/w01_hello.html
@@ -29,6 +29,7 @@
         <li><a href="w02_var_arrays.html">Lesson 2</a></li>
         <li><a href="W03_functions_arrays.html">Lesson 3</a></li>
         <li><a href="w04_functions_objects.html">Lesson 4</a></li>
+        <li><a href="w05_if_else_fetch.html">Lesson 5</a></li>
       </ul>
     </nav>
 
