--- a/w05_if_else_fetch.html
+++ b/w05_if_else_fetch.html
@@ -37,9 +37,8 @@
         <h3>
           <span id="message1"></span>
         </h3>
-        
       </section>
-      <hr>
+      <hr />
       <section>
         <h2>Temples in Utah</h2>
         <p>
@@ -49,14 +48,14 @@
             <option value="templeNameDescending">Temple Name Descending</option>
           </select>
 
-          <br> <br> 
-          <h3>Type the first letter in the temple name for the temples you want to search for</h3>
           <div>
+            <h3>
+              Type the first letter in the temple name for the temples you want
+              to search for
+            </h3>
             <input type="text" id="letter" name="letter" />
+            <button id="buttonLetter">Search</button>
           </div>
-
-          <div> <button id="buttonLetter">Serch</button> </div>
-
         </p>
         <div id="temples"></div>
       </section>
